# ChangeLog for games-simulation/openttd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jul 2008; Piotr Szymaniak <lazy_bum@o2.pl> -openttd-0.6.0.ebuild,
  +openttd-0.6.2_rc2.ebuild:
  New bugfix release.

  18 Jul 2008; Piotr Szymaniak <lazy_bum@o2.pl> +openttd-0.6.2_rc1.ebuild:
  New bugfix version.

  01 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> -openttd-0.6.1_rc1.ebuild,
  -openttd-0.6.1_rc2.ebuild, +openttd-0.6.1.ebuild:
  Version bump.

  28 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> +openttd-0.6.1_rc2.ebuild:
  Another new bugfix RC.

  24 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> +openttd-0.6.1_rc1.ebuild:
  Version bump to latest bugfix (thanks to Eion Robb, bug #215776).

  06 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl> -openttd-0.6.0_beta4.ebuild,
  +openttd-0.6.0.ebuild:
  Version bump.

  03 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +openttd-0.6.0_beta4.ebuild,
  +files/libiconv.patch:
  New ebuild, latest beta (thanks to Alexander Sulfrian, bug #206337)
