@@ -2,9 +2,7 @@ AUX libiconv.patch 338 RMD160 a59441b635c7958fb544a59828f31282ff149bac SHA1 4b09
 DIST openttd-0.4.8-scenarios.tar.bz2 5000799 RMD160 a6c2fa9f81e4e4628adb9c3932dec46ab4789777 SHA1 88b3caff739fbf7bd4eb143ae97925556e813ce4 SHA256 61788035bd78a3c0e393d5992432c37e0b6036d19a960543f26d43a46e39e6ca
 DIST openttd-0.5.0-scenarios.tar.bz2 917117 RMD160 f6ea4a4004bb0c90de9283a92b14da4bd99bc33c SHA1 965fc34bbe9998741ea07531772c9673b33aab99 SHA256 c89e652aca1a9ad9f0f4936dd99cd8a9c96f4c53450990ff87d87483f8e74a31
 DIST openttd-0.6.1-source.tar.bz2 3690207 RMD160 fac088a7d54cfcee3768c1da5ac7b2b10b85cdbe SHA1 09cf2b01c06389d75e5b6293e53ebab1d8c8b3a0 SHA256 d7d26e41f78a904e84dbfafad0f555e5d29aa20f3688e8d6865a57a46837086c
-DIST openttd-0.6.2-RC1-source.tar.bz2 3675811 RMD160 86acefdfcd2310b66863b98d1601dce87cf55ec0 SHA1 a02ca0d42f7b696c4c6debb9747ec839ef59de7f SHA256 0d347f71f03815b5222a8cb0da7f161e934f131fc0ab2f9510fca4691115d5e4
-DIST openttd-0.6.2-RC2-source.tar.bz2 3676750 RMD160 8ca33c4133d4b1c0efeb11784632e9dd30a6a2b4 SHA1 28fb0f64527f74410affdcb0d69422444fb201bd SHA256 f5e8864fd99b31bcc367021fd9af6d9a9675dcf184835ade818e843c276f3e31
+DIST openttd-0.6.2-source.tar.bz2 3670638 RMD160 6e6d8864773138ed2f588b19c0a7f399607cf6ea SHA1 c53ec5515729613fe55bbb714af48b908e70af39 SHA256 c28db9ae3798c6d44a5745319479478e758a207adf593a915e01014a38d42c7b
 EBUILD openttd-0.6.1.ebuild 5783 RMD160 9abc6a5a8e2e07fdd1b95c82708cc1ebef36f27f SHA1 84196e7edc64a6aa6e1a5a984da068e23d03c133 SHA256 25e5a12b902da142191442f93dad3fc27c3243e4917391dfce697abb001569ab
-EBUILD openttd-0.6.2_rc1.ebuild 5783 RMD160 9abc6a5a8e2e07fdd1b95c82708cc1ebef36f27f SHA1 84196e7edc64a6aa6e1a5a984da068e23d03c133 SHA256 25e5a12b902da142191442f93dad3fc27c3243e4917391dfce697abb001569ab
-EBUILD openttd-0.6.2_rc2.ebuild 5783 RMD160 9abc6a5a8e2e07fdd1b95c82708cc1ebef36f27f SHA1 84196e7edc64a6aa6e1a5a984da068e23d03c133 SHA256 25e5a12b902da142191442f93dad3fc27c3243e4917391dfce697abb001569ab
-MISC ChangeLog 1027 RMD160 2172debd4c5db256245335307196319e0b9d7053 SHA1 67645142563832c5fe96d94a535f36ce4908517f SHA256 c339b7dde678ea5d8754f9e97d5adccf4c6dfee253d89fc66d29c49c5207de90
+EBUILD openttd-0.6.2.ebuild 5783 RMD160 9abc6a5a8e2e07fdd1b95c82708cc1ebef36f27f SHA1 84196e7edc64a6aa6e1a5a984da068e23d03c133 SHA256 25e5a12b902da142191442f93dad3fc27c3243e4917391dfce697abb001569ab
+MISC ChangeLog 1196 RMD160 6c6654fefb29b0c9a1ac2f2417558d7658d6ba4f SHA1 dfc7f68116509af51eb78ad4fe5e8793a56e871a SHA256 ae102a6a44442e59038d18e96f5c3a0855af5cef7f0cba58591c3f6d3df16079
